refactor: Update PhotonVision AprilTag code for Java 21 compatibility